syntax = "proto3";

package org.example.protobuf;

option java_multiple_files = true;

service HelloService {
  rpc sayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
